# CMPE-240-Sesame-Server

./: Cargo.toml  Readme.md  Rocket.toml
android/Sesame2/app/: build.gradle
android/Sesame2/app/src/main/: AndroidManifest.xml
android/Sesame2/app/src/main/java/com/example/hzimmerman/sesame/: ToggleServoActivity.java
android/Sesame2/app/src/main/res/layout/: activity_main.xml
android/Sesame2/app/src/main/res/values/: strings.xml
android/Sesame2/app/src/main/res/values-round/: strings.xml
android/Sesame2/gradle/wrapper/: gradle-wrapper.properties
latex/: main.aux  main.out  main.tex
src/: main.rs  servo.rs
