[package]
name = "sesame"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]

[dependencies]
# Webserver
rocket = "0.3.3"
rocket_codegen = "0.3.3"
rocket_contrib = "0.3.3"

# Json serialization, not used currently.
serde = "1.0.14"
serde_json = "1.0.3"
serde_derive = "1.0.14"

# GPIO control
sysfs_gpio = "0.5"
# Logging
log = "0.3.8"
simplelog = "^0.4.2"
